--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     build: .
     command: ash -c "ng serve --host=0.0.0.0"
     volumes:
-      - ./first-app:/app
+      - .:/app
     ports:
       - "4200:4200"
